<resources>

    <string name="app_name">吃你妹</string>
    <string name="app_name_exit">退出</string>
    <string name="login_username_hint">请输入用户名</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_save_password">记住密码</string>
    <string name="login_regist">注册</string>
    <string name="login_logon">登录</string>
    <string name="login_account">帐号</string>
    <string name="login_password">密码</string>
    <string name="login_actionbar_title">登录吃你妹</string>
    <string name="login_please_input_name">请输入帐号</string>
    <string name="login_please_input_pwd">请输入密码</string>
    <string name="login_now_ing">正在登录中...</string>
    <string name="login_please_first_logon">请先登录</string>
    <string name="login_msg_success">登录成功</string>
    <string name="login_no_user">用户不存在</string>
    <string name="regist_mail">邮箱</string>
    <string name="regist_mail_tag">请输入常用邮箱</string>
    <string name="regist_mail_false_tag">电子邮箱格式不正确</string>
    <string name="regist_title">注册新用户</string>
    <string name="regist_success">注册成功</string>
    <string name="regist_ing">正在注册...</string>
    <string name="left_menu_yaoyiyao">推荐菜谱</string>
    <string name="left_menu_screening">筛选</string>
    <string name="left_menu_myself">我</string>
    <string name="left_menu_delicious">美食专题</string>
    <string name="left_menu_rows">菜谱排行</string>
    <string name="left_menu_news">最新发布</string>
    <string name="left_menu_search">搜索</string>
    <string name="left_menu_category">菜谱分类</string>
    <string name="left_menu_setting">设置</string>
    <string name="yaoyiyao_menu_collect">收藏</string>
    <string name="yaoyiyao_menu_collect_no">取消收藏</string>
    <string name="yaoyiyao_menu_share">分享</string>
    <string name="yaoyiyao_menu_refresh">菜谱筛选</string>
    <string name="yaoyiyao_menu_history">我的菜谱</string>
    <string name="yaoyiyao_fav_collect_no_receipe">亲，当前木有菜谱收藏</string>
    <string name="yaoyiyao_fav_collect_deal_data">正在请求当前操作...</string>
    <string name="yaoyiyao_share_from">来自：吃你妹</string>
    <string name="yaoyiyao_history_gridview">我的菜谱</string>
    <string name="mainactivity_backpress_double_tag">再按一次退出程序</string>
    <string name="recipe_detail_activity_title_detail">菜谱详情</string>
    <string name="recipe_detail_activity_title_report">报告</string>
    <string name="recipe_detail_activity_title_comment">评论</string>
    <string name="fragment_recipe_detail_kouwei">口味</string>
    <string name="fragment_recipe_detail_gongyi">工艺</string>
    <string name="fragment_recipe_detail_time">时间</string>
    <string name="fragment_recipe_detail_difficulty">难度</string>
    <string name="fragment_recipe_detail_zhuliao">主料</string>
    <string name="fragment_recipe_detail_fuliao">辅料</string>
    <string name="fragment_recipe_detail_peiliao">配料</string>
    <string name="fragment_recipe_detail_steps_text">制作步骤</string>
    <string name="fragment_recipe_detail_try">看不清楚，点一下试试</string>
    <string name="fragment_recipe_detail_tips_text">温馨小贴士</string>
    <string name="fragment_recipe_comment_reply_say">写评论</string>
    <string name="fragment_recipe_comment_load_more">显示下%d条</string>
    <string name="fragment_recipe_comment_load_more_no">没有更多显示</string>
    <string name="fragment_recipe_comment_loading_more">%d条载入中…</string>
    <string name="fragment_recipe_comment_load_err_retry">加载失败,点击重试</string>
    <string name="fragment_recipe_comment_repley_none">请填写评论内容</string>
    <string name="fragment_recipe_report_uponreport">上传报告</string>
    <string name="fragment_recipe_report_myselfreport">暂无报告，请上传自己做的这道菜</string>
    <string name="fragment_recipe_report_choose_pic">选择图片</string>
    <string name="fragment_recipe_report_user_by_pic">手机相册</string>
    <string name="fragment_recipe_report_user_by_camera">手机拍照</string>
    <string name="fragment_recipe_report_tag">无法保存上传的图片，请检查SD卡是否挂载</string>
    <string name="activity_upload_report_edit_hint">随便说说你的创作灵感</string>
    <string name="activity_upload_report_button_upload">提  交</string>
    <string name="activity_upload_report_upload_title">上传作品</string>
    <string name="activity_upload_report_upload_success">上传成功</string>
    <string name="fragment_personal_info">资料</string>
    <string name="fragment_personal_original">原创菜谱</string>
    <string name="fragment_personal_info_regist_time">注册时间</string>
    <string name="fragment_personal_info_sum">统计</string>
    <string name="fragment_personal_info_fav_recipe_num">收藏菜谱</string>
    <string name="fragment_personal_report_num">照片报告</string>
    <string name="fragment_personal_zhuliao_text">主料：%1$s</string>
    <string name="fragment_personal_load">已经加载全部</string>
    <string name="fragment_personal_item_delete">删除</string>
    <string name="fragment_personal_item_share">分享</string>
    <string name="fragment_personal_read_num">阅读：%1$s</string>
    <string name="fragment_personal_comment_num">评论：%1$s</string>
    <string name="fragment_personal_fav_num">收藏：%1$s</string>
    <string name="fragment_report_detail_info">报告详情</string>
    <string name="fragment_report_detail_comment">评论</string>
    <string name="fragment_report_detail_back">查看原菜谱</string>
    <string name="fragment_collect_search_tips">请输入关键字...</string>
    <string name="fragment_recipe_row_text_time">时间</string>
    <string name="fragment_recipe_row_text_fav">收藏</string>
    <string name="fragment_recipe_row_text_comment">评论</string>
    <string name="fragment_recipe_row_text_read">阅读</string>
    <string name="fragment_setting_normal">常规</string>
    <string name="fragment_setting_loging">登录</string>
    <string name="fragment_setting_unloging">注销</string>
    <string name="fragment_setting_choose_theme">选择主题</string>
    <string name="fragment_setting_theme">主题</string>
    <string name="fragment_setting_theme_red">红你妹</string>
    <string name="fragment_setting_theme_black">黑你妹</string>
    <string name="fragment_setting_supper">高级</string>
    <string name="fragment_setting_flowcontrol">流量控制</string>
    <string name="fragment_setting_delete_localcache">清除本地缓存</string>
    <string name="fragment_setting_no_download_pictures">禁止下载图片</string>
    <string name="fragment_setting_is_wife_update">自动提醒更新</string>
    <string name="fragment_setting_no_pictures">无图模式</string>
    <string name="fragment_setting_has_pictures">有图模式</string>
    <string name="fragment_setting_upload_pic_quality">上传图片质量</string>
    <string name="fragment_setting_upload_pic_quality_auto">自动</string>
    <string name="fragment_setting_upload_pic_quality_no_press">高清不压缩</string>
    <string name="fragment_setting_upload_pic_quality_half_press">压缩到50%</string>
    <string name="fragment_setting_upload_pic_quality_half_and_press">压缩到25%</string>
    <string name="fragment_setting_other">其他</string>
    <string name="fragment_setting_author">xiedantibu</string>
    <string name="fragment_setting_kaifazhe">开发者</string>
    <string name="fragment_setting_checkupgrade">检查更新</string>
    <string name="fragment_setting_currentbanben">当前版本</string>
    <string name="fragment_setting_feedback">意见反馈</string>
    <string name="fragment_setting_recommend_app">推荐应用</string>
    <string name="fragment_setting_update_message">更新日志</string>
    <string name="fragment_setting_deleting">正在删除数据...</string>
    <string name="fragment_setting_yes_or_no_deleting">确定要删除数据吗？</string>
    <string name="fragment_setting_yes">确定</string>
    <string name="fragment_setting_no">取消</string>
    <string name="fragment_setting_every_no">数据已经删除完</string>
    <string name="fragment_recipe_comment_fb_say">写反馈</string>
    <string name="changelog_close">关闭</string>
    <string name="title_changelog">更新日志</string>
    <string name="select_condition_banner_name">筛选条件</string>
    <string name="select_condition_difficulty">难度</string>
    <string name="select_condition_flavor">菜品口味</string>
    <string name="select_condition_time">烹饪时间</string>
    <string name="select_condition_constellation">星座</string>
    <string name="select_condition_difficulty_01">任意</string>
    <string name="select_condition_difficulty_02">简单</string>
    <string name="select_condition_difficulty_03">普通</string>
    <string name="select_condition_difficulty_04">高级</string>
    <string name="select_condition_flavor_01">任意</string>
    <string name="select_condition_flavor_02">清淡</string>
    <string name="select_condition_flavor_03">酸</string>
    <string name="select_condition_flavor_04">辣</string>
    <string name="select_condition_time_01">任意</string>
    <string name="select_condition_time_02">超快</string>
    <string name="select_condition_time_03">短</string>
    <string name="select_condition_time_04">一般</string>
    <string name="select_condition_constellation_01">任意</string>
    <string name="select_condition_constellation_02">白羊</string>
    <string name="select_condition_constellation_03">金牛</string>
    <string name="select_condition_constellation_04">双子</string>
    <!-- 数据处理 -->
    <string name="http_request_data_fail">数据请求失败</string>
    <string name="http_request_data_xml_fail">数据解析失败</string>
    <string name="http_request_net_fail">联网请求失败</string>

</resources>