<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registRoot"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/RelativeLayout02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="15.0dip"
        android:paddingBottom="7.0dip"
        android:paddingTop="14.0dip" >

        <EditText
            android:id="@+id/registusername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="3.0dip"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="5.0dip"
            android:layout_marginTop="5.0dip"
            android:background="@drawable/base_search_edittext_selector"
            android:hint="@string/login_username_hint"
            android:inputType="textEmailAddress"
            android:paddingLeft="80.0dip"
            android:saveEnabled="true"
            android:selectAllOnFocus="true"
            android:textSize="18.0sp" />

        <LinearLayout
            android:id="@+id/linearlayout01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/registusername"
            android:layout_alignLeft="@id/registusername"
            android:layout_alignTop="@id/registusername"
            android:layout_marginRight="15.0dip"
            android:gravity="center_vertical"
            android:paddingLeft="7.0dip" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7.0dip"
                android:singleLine="true"
                android:text="@string/login_account"
                android:textAppearance="@style/login_title_style" />
        </LinearLayout>

        <EditText
            android:id="@+id/registpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/registusername"
            android:layout_alignRight="@id/registusername"
            android:layout_below="@id/registusername"
            android:layout_marginRight="1.0dip"
            android:layout_marginTop="25.0dip"
            android:background="@drawable/base_search_edittext_selector"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:maxLength="32"
            android:paddingLeft="80.0dip"
            android:saveEnabled="true"
            android:selectAllOnFocus="true"
            android:textSize="18.0sp" />

        <LinearLayout
            android:id="@+id/linearlayout02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/registpassword"
            android:layout_alignLeft="@id/registpassword"
            android:layout_alignRight="@id/linearlayout01"
            android:layout_alignTop="@id/registpassword"
            android:gravity="center_vertical"
            android:paddingLeft="7.0sp" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7.0dip"
                android:singleLine="true"
                android:text="@string/login_password"
                android:textAppearance="@style/login_title_style" />
        </LinearLayout>

        <EditText
            android:id="@+id/registmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/registpassword"
            android:layout_alignRight="@id/registpassword"
            android:layout_below="@id/registpassword"
            android:layout_marginRight="1.0dip"
            android:layout_marginTop="25.0dip"
            android:background="@drawable/base_search_edittext_selector"
            android:hint="@string/regist_mail_tag"
            android:inputType="textEmailAddress"
            android:maxLength="32"
            android:paddingLeft="80.0dip"
            android:saveEnabled="true"
            android:selectAllOnFocus="true"
            android:textSize="18.0sp" />

        <LinearLayout
            android:id="@+id/linearlayout03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/registmail"
            android:layout_alignLeft="@id/registmail"
            android:layout_alignRight="@id/linearlayout02"
            android:layout_alignTop="@id/registmail"
            android:gravity="center_vertical"
            android:paddingLeft="7.0sp" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7.0dip"
                android:singleLine="true"
                android:text="@string/regist_mail"
                android:textAppearance="@style/login_title_style" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14.0dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/do_register"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:background="@drawable/biz_pc_account_register_btn_selector"
            android:text="@string/login_regist"
            android:textColor="#ff000000"
            android:textSize="16.0sp" />
    </LinearLayout>

</LinearLayout>